		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups

--------------------------------------------------------------------------------

Version 2.2.6 - The "I won't tell you" version.
----------
2009-08-??

	GonoszTopi:
		* Fixed obfuscated server UDP communication.
		* Fixed cross-endian Kad node verification.

	Marcell:
		* Properly update transfers tab's bottom pane's title.

	mr_hyde:
		* Fixed a bug in detecting and using the fallocate() function.

	Sam Hocevar:
		* Now really fixed that security issue.

	Stu Redman:
		* Fixed HTTP download if server transmits no content-length
		* Fixed several cases of amulecmd printing zero on big endian machines
		* Fixed amuleweb crashing on tiny downloads
		* Added version resources to MSVC binaries

--------------------------------------------------------------------------------

Version 2.2.5 - The "never say never" version.
----------
2009-05-16

	GonoszTopi:
		* Fixed possible security hole when previewing filenames containing single quotes
		* Fixed default webserver port

	Stu Redman:
		* Fixed upload of the last part of a file which he broke in 2.2.4
		* Fixed setting speed limits from remote gui's tray icon

	Special Thanks To:
		* CroMag for pointing out the upload problem

--------------------------------------------------------------------------------

Version 2.2.4 - The "we didn't have a .4 version since... well... long ago" version.
----------
2009-04-03

	freddy77:
		* Plugged various memory leaks.

	FreeToGo:
		* Add comment to desktop file to allow autostart in Gnome

	gabrielix:
		* Compilation fix for gcc-4.3.2.

	Gaznevada:
		* Compilation fix for IRIX.
		* Fixed file handles on IRIX.

	GonoszTopi:
		* Fixed compilation of Format.cpp for some platforms.
		* Fixed wxWidgets socket library initialization.
		* Fixed partfile importer destroying imported data.
		* Separated GUI and core code in partfile importer, thus fixing
		  occasional crashes/hangs.